Cleaned up website

--- a/draw_site/index.html
+++ b/draw_site/index.html
@@ -42,57 +42,19 @@
             <div id="typography" class="cd-section">
                 <br><br><br>
                 <div class="title">
-                    <h2>Our Mission</h2>
+                  <center><h2>See it Draw</h2></center>
                 </div>
 
-                <form autocomplete="off" action="/action_page.php">
-                    <div class="autocomplete" style="width:300px;">
-                        <input id="myInput" type="text" name="myCountry" placeholder="Country">
-                    </div>
-                    <input type="submit">
-                </form>
+                <center>
+                  <p>Type in a word below</p>
 
-                <div class="row">
-                    <div class="tim-typo">
-                        <h2>
-                            <span class="tim-note"></span>We want to explore various factors that may impact poverty levels in Champaign county.
-                        </h2>
-                    </div>
-                    <div class="tim-typo">
-                        <h3>In doing so, we identify areas in which more resources need to be allocated to help alleviate the issue. While researching, we also discovered a disturbing truth:</h3>
-                    </div>
-
-                    <div class="tim-typo">
-                        <h2 class="text-danger">
-                            the Champaign area has one of the highest poverty rates in all of Illinois.
-                        </h2>
-                    </div>
-
-                    <br><br><br>
-
-                    <div class="tim-typo">
-                        <h3>We trained a random forest classifier on data provided by <a href="https://ccrpc.org/data/?category_name=planning">Champaign County Regional Planning Comission</a>, using cities, towns, and municipalities as data points, and key features such as:</h3>
-                    </div>
-
-                    <div class="tim-typo">
-                        <ul>
-                            <h4>
-                                <li>Average Household Size</li>
-                                <li>Language Most Often Spoken at Home</li>
-                                <li>Mean Travel Time to Work</li>
-                                <li>Assessed population</li>
-                            </h4>
-                        </ul>
-                    </div>
-
-                    <div class="tim-typo">
-                        <h3>to generate a model that would identify the most important features that influence the poverty rate. We found that (after median household income) the most influential features were average household size and language most often spoken at home.</h3>
-                    </div>
-
-                    <div class="tim-typo">
-                        <h2>This website aims to provide a simple way for those in poverty to find resources to improve their current situation</h2>
-                    </div>
-                </div>
+                  <form autocomplete="off" action="/action_page.php">
+                      <div class="autocomplete" style="width:300px;">
+                          <input id="myInput" type="text" name="myCountry" placeholder="ex. apple">
+                      </div>
+                      <input type="submit">
+                  </form>
+                </center>
             </div>
 
             <!-- Seperator -->
@@ -104,62 +66,13 @@
 
             <div id="typography" class="cd-section">
                 <div class="title">
-                    <h2>Our Findings</h2>
-                </div>
-
-                <div class="tim-typo">
-                    <h3>We found that the highest-weighted feature is average household size, likely because the larger the family the more difficult it is to feed everyone. Also, the percent of people with an associate’s degree or higher is really important for determining if an area will have a higher percentage in poverty.</h3>
+                    <center><h2><a href="info.html">Learn more</a></h2></center>
                 </div>
             </div>
 
             <div class="progress progress-line-primary">
                 <div class="progress-bar progress-bar-seperator" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
                     <span class="sr-only"></span>
-                </div>
-            </div>
-
-            <div id="typography" class="cd-section">
-                <div class="title">
-                    <h2>Proposed Soulutions</h2>
-                </div>
-
-                <div class="tim-typo">
-                    <h3>Now that we have determined the factors that impact poverty the most, more resources need to be diverted to these sectors to help alleviate the widespread problem of poverty in Champaign County. For example, we found that very few of the pantries in the CU area operate more than once a week, so many people find themselves going to multiple food pantries just to survive. Another important sector is education, including associate’s degrees and speaking LOTE. More low-cost opportunities need to be provided to under-priveleged individuals so that they can receive the education that they need to hopefully overcome poverty.</h3>
-                </div>
-
-                <div class="row">
-                    <div class="tim-typo">
-                        <h4>Above you will find all local food pantries in the Champaign-Urbana area. Included are the locations, hours, phone numbers, and websites of all locations.<h4>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="tim-typo">
-                        <h4>Above is a map showing locations in the Champaign-Urbana area that can help those that speak LOTE.<h4>
-                    </div>
-                </div>
-            </div>
-
-            <div class="progress progress-line-primary">
-                <div class="progress-bar progress-bar-seperator" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
-                    <span class="sr-only"></span>
-                </div>
-            </div>
-        </div>
-
-        <div class="container">
-            <div class="title">
-                <h2>Upload your own CSV files</h2>
-            </div>
-
-            <div class="row">
-                <div class="tim-typo">
-                    <h4>See what features are most important in determining poverty in your own area</h4>
-
-                    <form action="upload.php" method="post" enctype="multipart/form-data">
-                        <input type="file" name="fileToUpload" id="fileToUpload" accept=".csv">
-                        <input class="btn btn-primary" type="submit" value="Upload CSV">
-                    </form>
                 </div>
             </div>
         </div>
@@ -176,9 +89,6 @@
     </div>
     <footer class="footer" data-background-color="black">
         <div class="container">
-            <nav class="float-left">
-                <ul></ul>
-            </nav>
             <div class="copyright float-right">
                 &copy; DrawIt 2019 - William Eustis, Hassan Farooq, Timothy Vitkin, AJ Wisniewski
             </div>
