--- a/draw_site/info.html
+++ b/draw_site/info.html
@@ -112,21 +112,24 @@
                 </div>
                 <br><br>
 
-                <br><br><br>
-                <div class="title">
-                    <center><h2>See it Draw</h2></center>
+                <!-- Seperator -->
+                <div class="progress progress-line-primary">
+                    <div class="progress-bar progress-bar-seperator" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
+                        <span class="sr-only"></span>
+                    </div>
                 </div>
 
-                <center>
-                    <p>Type in a word below</p>
+                <div id="typography" class="cd-section">
+                    <div class="title">
+                        <center><h2><a href="index.html">Home</a></h2></center>
+                    </div>
+                </div>
 
-                    <form autocomplete="off" action="/action_page.php">
-                        <div class="autocomplete" style="width:300px;">
-                            <input id="myInput" type="text" name="myCountry" placeholder="ex. apple">
-                        </div>
-                        <input type="submit">
-                    </form>
-                </center>
+                <div class="progress progress-line-primary">
+                    <div class="progress-bar progress-bar-seperator" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
+                        <span class="sr-only"></span>
+                    </div>
+                </div>
 
                 <div class="section section-download" id="downloadSection">
                     <div class="container">
