--- a/draw_site/succ.html
+++ b/draw_site/succ.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>DrawIt</title>
+  <title>SUCC</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
@@ -29,7 +29,7 @@
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
                     <div class="brand">
-                        <h1>DrawIt</h1>
+                        <h1>SUCC</h1>
                         <h3>Have a computer draw something! Type in an object and see it draw</h3>
                     </div>
                 </div>
@@ -48,19 +48,7 @@
                 <center>
                   <p>Type in a word below</p>
 
-                  <script>
-                    function validateForm() {
-                      var x = document.forms["myForm"]["myCountry"].value;
-                      var countries = ["alarm clock", "apple", "coffee cup", "eyeglasses", "fish", "flower", "leaf", "pig", "smiley face", "mona lisa"];
-
-                      if (!countries.includes(x)) {
-                        alert("Please select a valid option");
-                        return false;
-                      }
-                    }
-                  </script>
-
-                  <form name = "myForm" autocomplete="off" action="run_script.php" onsubmit="return validateForm()" method="get">
+                  <form autocomplete="off" action="/action_page.php">
                       <div class="autocomplete" style="width:300px;">
                           <input id="myInput" type="text" name="myCountry" placeholder="ex. apple">
                       </div>
