--- a/draw_site/succ.html
+++ b/draw_site/succ.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -29,8 +29,8 @@
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
                     <div class="brand">
-                        <h1>SUCC</h1>
-                        <h3>Have a computer draw something! Type in an object and see it draw</h3>
+                        <h1>DrawIt</h1>
+                        <h3>Teaching a computer to doodle through GANs</h3>
                     </div>
                 </div>
             </div>
