--- a/draw_site/index.html
+++ b/draw_site/index.html
@@ -42,8 +42,12 @@
         <div class="container">
             <div id="typography" class="cd-section">
                 <br><br><br>
-                <div class="title">
+                <div class="title-small-margin">
                     <center><h2>Type in a Word Below</h2></center>
+                </div>
+
+                <div class="title-sub-title">
+                    <center><h5>Alarm Clock, Apple, Coffee Cup, Eyeglasses, Fish, Flower, Leaf, Mona Lisa, Pig, Smiley Face</h5></center>
                 </div>
 
                 <center>
