--- a/draw_site/index.html
+++ b/draw_site/index.html
@@ -25,7 +25,7 @@
         </div>
     </nav>
 
-    <div class="page-header header-filter clear-filter grey-filter" data-parallax="true" style="background-image: url('assets/bkg.jpg');">
+    <div class="page-header header-filter clear-filter grey-filter" data-parallax="true" style="background-image: url('assets/bkg.gif');">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
