Update layout and info
Added more information to information and added more seperators

--- a/draw_site/info.html
+++ b/draw_site/info.html
@@ -52,6 +52,13 @@
                     <h2>Learn More</h2>
                 </div>
 
+                <!-- Seperator -->
+                <div class="progress progress-line-primary">
+                    <div class="progress-bar progress-bar-seperator" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
+                        <span class="sr-only"></span>
+                    </div>
+                </div>
+
                 <div class="row">
                     <div class="QA-Header">
                         <h2>
@@ -64,13 +71,48 @@
 
                     <div class="QA-Header">
                         <h2>
-                            <span class="tim-note"></span>Question 2
+                            <span class="tim-note"></span>What does it do?
                         </h2>
                     </div>
                     <div class="QA-Answer">
-                        <h3>Answer 2</h3>
+                        <h3>It does stuff</h3>
                     </div>
 
+                    <div class="QA-Header">
+                        <h2>
+                            <span class="tim-note"></span>How was it built?
+                        </h2>
+                    </div>
+                    <div class="QA-Answer">
+                        <h3>Online tutorials</h3>
+                    </div>
+
+                    <div class="QA-Header">
+                        <h2>
+                            <span class="tim-note"></span>What were some of the challenges you ran into?
+                        </h2>
+                    </div>
+                    <div class="QA-Answer">
+                        <h3>Training large amounts of data</h3>
+                    </div>
+
+                    <div class="QA-Header">
+                        <h2>
+                            <span class="tim-note"></span>What were some of the main takeaways from this project?
+                        </h2>
+                    </div>
+                    <div class="QA-Answer">
+                        <h3>Training GANs on Google Cloud</h3>
+                    </div>
+
+                    <div class="QA-Header">
+                        <h2>
+                            <span class="tim-note"></span>What is next for DrawIt?
+                        </h2>
+                    </div>
+                    <div class="QA-Answer">
+                        <h3>Animating the drawing, running image analysis models to predict colors based on word</h3>
+                    </div>
                     <br><br><br><br><br><br>
                 </div>
             </div>
@@ -84,59 +126,40 @@
 
             <div id="typography" class="cd-section">
                 <div class="title">
-                    <h2>New Section</h2>
+                    <center><h2><a href="index.html">Home</a></h2></center>
                 </div>
+            </div>
 
-                <div class="QA-Header">
-                    <h3>New Section body paragraph</h3>
+            <div class="progress progress-line-primary">
+                <div class="progress-bar progress-bar-seperator" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
+                    <span class="sr-only"></span>
                 </div>
+            </div>
 
-                <br><br><br>
-
-                <!-- Seperator -->
-                <div class="progress progress-line-primary">
-                    <div class="progress-bar progress-bar-seperator" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
-                        <span class="sr-only"></span>
-                    </div>
-                </div>
-
-                <div id="typography" class="cd-section">
-                    <div class="title">
-                        <center><h2><a href="index.html">Home</a></h2></center>
-                    </div>
-                </div>
-
-                <div class="progress progress-line-primary">
-                    <div class="progress-bar progress-bar-seperator" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
-                        <span class="sr-only"></span>
-                    </div>
-                </div>
-
-                <div class="section section-download" id="downloadSection">
-                    <div class="container">
-                        <div class="sharing-area text-center">
-                            <a id="github" href="https://github.com/timot3/VandyHacks" target="_blank" class="btn btn-raised btn-github">
-                                <i class="fa fa-github"></i> Find us on GitHub
-                            </a>
-                        </div>
+            <div class="section section-download" id="downloadSection">
+                <div class="container">
+                    <div class="sharing-area text-center">
+                        <a id="github" href="https://github.com/timot3/VandyHacks" target="_blank" class="btn btn-raised btn-github">
+                            <i class="fa fa-github"></i> Find us on GitHub
+                        </a>
                     </div>
                 </div>
             </div>
-            <footer class="footer" data-background-color="black">
-                <div class="container">
-                    <div class="copyright float-right">
-                        &copy; DrawIt 2019 - William Eustis, Hassan Farooq, Timothy Vitkin, AJ Wisniewski
-                    </div>
-                </div>
-            </footer>
-
-            <!--   Core JS Files   -->
-            <script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
-            <script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
-            <script src="./assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-            <script src="./assets/js/plugins/moment.min.js"></script>
-            <script src="./assets/js/autocomplete.js"></script>
         </div>
+        <footer class="footer" data-background-color="black">
+            <div class="container">
+                <div class="copyright float-right">
+                    &copy; DrawIt 2019 - William Eustis, Hassan Farooq, Timothy Vitkin, AJ Wisniewski
+                </div>
+            </div>
+        </footer>
+
+        <!--   Core JS Files   -->
+        <script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
+        <script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
+        <script src="./assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+        <script src="./assets/js/plugins/moment.min.js"></script>
+        <script src="./assets/js/autocomplete.js"></script>
     </div>
 </body>
 
