Cleaned up information webpage
Remove duplicate question and updated information

--- a/draw_site/info.html
+++ b/draw_site/info.html
@@ -66,16 +66,7 @@
                         </h2>
                     </div>
                     <div class="QA-Answer">
-                        <h3>Brief overview of what it does and how it does it</h3>
-                    </div>
-
-                    <div class="QA-Header">
-                        <h2>
-                            <span class="tim-note"></span>What does it do?
-                        </h2>
-                    </div>
-                    <div class="QA-Answer">
-                        <h3>It does stuff</h3>
+                        <h3>Brief overview of what it does</h3>
                     </div>
 
                     <div class="QA-Header">
@@ -84,7 +75,7 @@
                         </h2>
                     </div>
                     <div class="QA-Answer">
-                        <h3>Online tutorials</h3>
+                        <h3>Python, Flask, Google Cloud for training, HTML, CSS, JS</h3>
                     </div>
 
                     <div class="QA-Header">
