--- a/draw_site/info.html
+++ b/draw_site/info.html
@@ -66,7 +66,7 @@
                         </h2>
                     </div>
                     <div class="QA-Answer">
-                        <h3>Brief overview of what it does</h3>
+                        <h3>We are a group of passionate individuals who wanted to create art using Generative Adversarial Networks (GANs).</h3>
                     </div>
 
                     <div class="QA-Header">
