continue updating info.html

--- a/draw_site/info.html
+++ b/draw_site/info.html
@@ -66,7 +66,11 @@
                         </h2>
                     </div>
                     <div class="QA-Answer">
-                        <h3>We are a group of passionate individuals who wanted to create art using Generative Adversarial Networks (GANs).</h3>
+                        <h3>Before VandyHacks, we never considered hackathons as a place for art; for us, it was always an opportunity to try out something new with machine
+                            learning. When considering the art theme of VandyHacks, we wanted to once again do something with ML to further our knowledge in the field,
+                            but this time with a more <i>creative</i> aspect. <br>
+                            
+                            As an architecture, GANs (Generative Adversarial Networks) are known for </h3>
                     </div>
 
                     <div class="QA-Header">
