--- a/draw_site/info.html
+++ b/draw_site/info.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>DrawIt</title>
+    <title>GANdraw</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
     <!--     Fonts and icons     -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
@@ -31,7 +31,7 @@
                     <div class="brand">
                         <h1>
                             <a id="index" href="index.html" style="color: inherit;">
-                                DrawIt
+                                GANdraw
                             </a>
                         </h1>
                         <h3>
@@ -62,15 +62,18 @@
                 <div class="row">
                     <div class="QA-Header">
                         <h2>
-                            <span class="tim-note"></span>What is DrawIt?
+                            <span class="tim-note"></span>What is GANdraw?
                         </h2>
                     </div>
                     <div class="QA-Answer">
-                        <h3>Before VandyHacks, we never considered hackathons as a place for art; for us, it was always an opportunity to try out something new with machine
-                            learning. When considering the art theme of VandyHacks, we wanted to once again do something with ML to further our knowledge in the field,
-                            but this time with a more <i>creative</i> aspect. <br>
-                            
-                            As an architecture, GANs (Generative Adversarial Networks) are known for </h3>
+                        <h3>
+                            We've created a website allowing users to easily interact with our trained Generative Adversarial Network (GAN) in order to create 
+                            computer generated doodles.
+                            <br /><br />
+                            Before VandyHacks, we thought of hackathons as a place to practice our technical programming skills and try out something new like Machine
+                            Learning (ML). When considering the art theme of VandyHacks, we wanted to once again do something with ML to further our knowledge in the field,
+                            but this time with a more <i>creative</i> aspect.
+                        </h3>
                     </div>
 
                     <div class="QA-Header">
@@ -79,7 +82,7 @@
                         </h2>
                     </div>
                     <div class="QA-Answer">
-                        <h3>Python, Flask, Google Cloud for training, HTML, CSS, JS</h3>
+                        <h3>We used a mixture of Python, Flask, HTML, CSS, JavaScript, and Google Cloud for training and hosting.</h3>
                     </div>
 
                     <div class="QA-Header">
@@ -97,18 +100,22 @@
                         </h2>
                     </div>
                     <div class="QA-Answer">
-                        <h3>Training GANs on Google Cloud</h3>
+                        <h3>One of our main takeaways from this experience was learning how to train GANs on large datasets using Google Cloud.</h3>
                     </div>
 
                     <div class="QA-Header">
                         <h2>
-                            <span class="tim-note"></span>What is next for DrawIt?
+                            <span class="tim-note"></span>What is next for GANdraw?
                         </h2>
                     </div>
                     <div class="QA-Answer">
-                        <h3>Animating the drawing, running image analysis models to predict colors based on word</h3>
+                        <h3>
+                            Due to time constraints and limited computing resources, we were only able to train our network on a small subset of the full dataset.
+                            Additionally, some features we were planning to implement include animating the resulting drawing and possibly running image analysis models to predict
+                            colors based on the word.
+                        </h3>
+                        <br><br><br>
                     </div>
-                    <br><br><br><br><br><br>
                 </div>
             </div>
 
@@ -144,7 +151,7 @@
         <footer class="footer" data-background-color="black">
             <div class="container">
                 <div class="copyright float-right">
-                    &copy; DrawIt 2019 - William Eustis, Hassan Farooq, Timothy Vitkin, AJ Wisniewski
+                    &copy; GANdraw 2019 - William Eustis, Hassan Farooq, Timothy Vitkin, AJ Wisniewski
                 </div>
             </div>
         </footer>
