--- a/draw_site/index.html
+++ b/draw_site/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>DrawIt</title>
+  <title>GANdraw</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
@@ -30,7 +30,7 @@
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
                     <div class="brand">
-                        <h1>DrawIt</h1>
+                        <h1>GANdraw</h1>
                         <h3>Teaching a computer to doodle through GANs</h3>
                     </div>
                 </div>
@@ -57,9 +57,7 @@
                     <center><h2>Type in a Word Below</h2></center>
                 </div>
 
-                <div class="title-sub-title">
-                    <center><h5>Alarm Clock, Apple, Coffee Cup, Eyeglasses, Fish, Flower, Leaf, Mona Lisa, Pig, Smiley Face</h5></center>
-                </div>
+                <br/><br/>
 
                 <center>
                     <script>
@@ -80,6 +78,9 @@
                         </div>
                         <input type="submit">
                     </form>
+                    <!--<div class="title-sub-title">
+                        <center><h5>Alarm Clock, Apple, Coffee Cup, Eyeglasses, Fish, Flower, Leaf, Mona Lisa, Pig, Smiley Face</h5></center>
+                    </div>-->
                 </center>
             </div>
 
@@ -94,7 +95,7 @@
 
             <div id="typography" class="cd-section">
                 <div class="title">
-                    <center><h2><a href="info.html">Learn more</a></h2></center>
+                    <center><h2><a href="info.html">Learn More</a></h2></center>
                 </div>
             </div>
 
@@ -117,7 +118,7 @@
         <footer class="footer" data-background-color="black">
             <div class="container">
                 <div class="copyright float-right">
-                    &copy; DrawIt 2019 - William Eustis, Hassan Farooq, Timothy Vitkin, AJ Wisniewski
+                    &copy; GANdraw 2019 - William Eustis, Hassan Farooq, Timothy Vitkin, AJ Wisniewski
                 </div>
             </div>
         </footer>
