--- a/draw_site/info.html
+++ b/draw_site/info.html
@@ -78,6 +78,22 @@
 
                     <div class="QA-Header">
                         <h2>
+                            <span class="tim-note"></span>What is a GAN?
+                        </h2>
+                    </div>
+                    <div class="QA-Answer">
+                        <h3>
+                            A GAN, or Generative Adversarial Network, is a class of deep learning that consists of two networks competing with each other.
+                            One of the networks tries to generate images, while the other tries to guess which of the generated images are fake.
+                            <br>This results in a kind of reinforcement for the Generator when 
+                            the Discriminator guesses which ones are fake, prompting the Generator to make images closer to the original dataset. GANs
+                            have recently been used in media to create fake images.
+                        </h3>
+                    </div>
+
+
+                    <div class="QA-Header">
+                        <h2>
                             <span class="tim-note"></span>How was it built?
                         </h2>
                     </div>
