changed index layout

--- a/draw_site/index.html
+++ b/draw_site/index.html
@@ -42,22 +42,11 @@
         <div class="container">
             <div id="typography" class="cd-section">
                 <br><br><br>
-                <div class="title">
-                    <h2>Home</h2>
-                </div>
-
-                <!-- Seperator -->
-                <div class="progress progress-line-primary">
-                    <div class="progress-bar progress-bar-seperator" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
-                        <span class="sr-only"></span>
-                    </div>
-                </div>
-
                 <div class="title-small-margin">
                     <center><h2>Type in a Word Below</h2></center>
                 </div>
 
-                <br/><br/>
+                <br><br>
 
                 <center>
                     <script>
@@ -78,9 +67,24 @@
                         </div>
                         <input type="submit">
                     </form>
-                    <!--<div class="title-sub-title">
-                        <center><h5>Alarm Clock, Apple, Coffee Cup, Eyeglasses, Fish, Flower, Leaf, Mona Lisa, Pig, Smiley Face</h5></center>
-                    </div>-->
+
+                    <br>
+                    <h3>Some examples...</h3>
+                    <br>
+                    <img src="assets/examples/1.png" title="Smiley face">
+                    <img src="assets/examples/1.png" title="Smiley face">
+                    <img src="assets/examples/1.png" title="Smiley face">
+                    <br>
+                    <img src="assets/examples/1.png" title="Smiley face">
+                    <img src="assets/examples/1.png" title="Smiley face">
+                    <img src="assets/examples/1.png" title="Smiley face">
+                    <br>
+                    <img src="assets/examples/1.png" title="Smiley face">
+                    <img src="assets/examples/1.png" title="Smiley face">
+                    <img src="assets/examples/1.png" title="Smiley face">
+                    <br>
+                    <img src="assets/examples/1.png" title="Smiley face">
+
                 </center>
             </div>
 
