Updated GAN FAQ
Made GAN introduction more friendly for beginners.

--- a/draw_site/info.html
+++ b/draw_site/info.html
@@ -83,11 +83,10 @@
                     </div>
                     <div class="QA-Answer">
                         <h3>
-                            A GAN, or Generative Adversarial Network, is a class of deep learning that consists of two networks competing with each other.
-                            One of the networks tries to generate images, while the other tries to guess which of the generated images are fake.
-                            <br>This results in a kind of reinforcement for the Generator when 
-                            the Discriminator guesses which ones are fake, prompting the Generator to make images closer to the original dataset. GANs
-                            have recently been used in media to create fake images.
+                            A Generative Adversarial Network, or GAN, is a class of deep learning that consists of two networks competing against each other.
+                            The generator learns to create fake data that appears like real data to the discriminator, while the discriminator tries to determine 
+                            whether a given piece of input data is real. The generator incorporates this feedback from the discriminator to make images more similar to the 
+                            original dataset. In our case, the generator creates fake images that appear to be accurate depictions of a certain word to the discriminator. 
                         </h3>
                     </div>
 
